# WARNING: head commit changed in the meantime
Merge branch 'master' of
https://github.com/NadaAmr/CustomerPhoneNumber.git

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=phoneNumberService
 server.servlet.context-path=/api/
 
 #Datasource
-spring.datasource.url = jdbc:sqlite:sample.db
+spring.datasource.url = jdbc:sqlite::resource:sample.db
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name = org.sqlite.JDBC
 spring.jpa.properties.hibernate.dialect=com.jumia.phonenumber.categorization.demo.configuration.dialect.SQLDialect
